# gsd-pi-config

./: .env.web  .env.web.example  .env.web.production  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.agents/context/: DESIGN.md
.github/workflows/: pages.yml  release.yml  test-frontend.yml  vercel-production.yml
api/: oauth-config.ts  submit-preset.ts  tsconfig.json
src/: App.desktop.tsx  App.tsx  App.web.tsx  ConfigApp.tsx  DesktopApp.tsx  WebApp.tsx  constants.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: core.rs  lib.rs
src/components/: BrandMark.tsx  FormControls.tsx  ImportPreferencesModal.tsx  LoadPresetModal.tsx  Palette.tsx  PreferencesSections.tsx  ShareModal.tsx  Sidebar.tsx  SubmitPresetModal.tsx  ThemeToggle.tsx  WebShell.tsx  WebStartPanel.tsx
src/components/sections/: AgentSettingsSection.tsx  AgentsLibrarySection.tsx  ApiKeysSection.tsx  BudgetSection.tsx  CmuxSection.tsx  (+23 more)
src/hooks/: useDirty.ts  useMediaQuery.ts
src/lib/: agentSettings.ts  agentSettingsTypes.ts  cleanPrefs.ts  customProviders.ts  downloadWorkspace.ts  fields.ts  importWorkspace.ts  keyboard.ts  pickFile.ts  preferencesCore.test.ts  preferencesCore.ts  presets.ts  presetsCatalog.ts  sectionConfig.ts  storageMigration.ts  tauriListeners.ts  theme.ts  uiClasses.ts  updater.ts  validators.ts
src/pages/: GalleryPage.tsx  OAuthCallbackPage.tsx  WizardPage.tsx
src/platform/: backend.tsx  index.ts  tauri.ts  tauriBackend.ts  types.ts  web.ts  webBackend.ts
