[package]
name = "gsd-pi-config"
version = "1.1.0"
description = "Desktop configuration manager for GSD Pi preferences"
authors = ["Jeremy McSpadden <jeremy@fluxlabs.net>"]
license = "MIT"
repository = "https://github.com/open-gsd/gsd-pi-config"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }

[dev-dependencies]
tempfile = "3"
